@@ -1,6 +1,7 @@
 Version 1.0.xxxx (November xxth 2013)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
 - Implemented: Limitless/AppLamp, option to set Hue/Brightness in the Edit option
+- Implemented: Limitless/AppLamp, can now also be used as 'Dimmer'
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
